@@ -1,0 +1,277 @@
+{
+    "entity": [
+        ["algae-farm-5", "angels-algae-farm-5"],
+        ["bio-arboretum-2", "angels-bio-arboretum-2"],
+        ["bio-arboretum-3", "angels-bio-arboretum-3"],
+        ["bio-generator-temperate-2", "angels-bio-generator-temperate-2"],
+        ["bio-generator-temperate-3", "angels-bio-generator-temperate-3"],
+        ["bio-generator-swamp-2", "angels-bio-generator-swamp-2"],
+        ["bio-generator-swamp-3", "angels-bio-generator-swamp-3"],
+        ["bio-generator-desert-2", "angels-bio-generator-desert-2"],
+        ["bio-generator-desert-3", "angels-bio-generator-desert-3"],
+        ["bio-press-2", "angels-bio-press-2"],
+        ["bio-press-3", "angels-bio-press-3"],
+        ["bio-processor-2", "angels-bio-processor-2"],
+        ["bio-processor-3", "angels-bio-processor-3"],
+        ["bio-butchery-2", "angels-bio-butchery-2"],
+        ["bio-butchery-3", "angels-bio-butchery-3"],
+        ["composter-2", "angels-composter-2"],
+        ["composter-3", "angels-composter-3"],
+        ["crop-farm-2", "angels-crop-farm-2"],
+        ["crop-farm-3", "angels-crop-farm-3"],
+        ["temperate-farm-2", "angels-temperate-farm-2"],
+        ["temperate-farm-3", "angels-temperate-farm-3"],
+        ["swamp-farm-2", "angels-swamp-farm-2"],
+        ["swamp-farm-3", "angels-swamp-farm-3"],
+        ["desert-farm-2", "angels-desert-farm-2"],
+        ["desert-farm-3", "angels-desert-farm-3"],
+        ["bio-hatchery-2", "angels-bio-hatchery-2"],
+        ["bio-hatchery-3", "angels-bio-hatchery-3"],
+        ["nutrient-extractor-2", "angels-nutrient-extractor-2"],
+        ["nutrient-extractor-3", "angels-nutrient-extractor-3"],
+        ["bio-refugium-fish-2", "angels-bio-refugium-fish-2"],
+        ["bio-refugium-fish-3", "angels-bio-refugium-fish-3"],
+        ["bio-refugium-puffer-2", "angels-bio-refugium-puffer-2"],
+        ["bio-refugium-puffer-3", "angels-bio-refugium-puffer-3"],
+        ["bio-refugium-biter-2", "angels-bio-refugium-biter-2"],
+        ["bio-refugium-biter-3", "angels-bio-refugium-biter-3"],
+        ["seed-extractor-2", "angels-seed-extractor-2"],
+        ["seed-extractor-3", "angels-seed-extractor-3"],
+
+        ["advanced-chemical-plant-3","angels-advanced-chemical-plant-3"],
+
+        ["hydro-plant-4", "angels-hydro-plant-4"],
+        ["salination-plant-3", "angels-salination-plant-3"],
+        ["washing-plant-3", "angels-washing-plant-3"],
+        ["washing-plant-4", "angels-washing-plant-4"],
+        ["ore-crusher-4", "angels-ore-crusher-4"],
+        ["ore-floatation-cell-4", "angels-ore-floatation-cell-4"],
+        ["ore-leaching-plant-4", "angels-ore-leaching-plant-4"],
+        ["ore-refinery-3", "angels-ore-refinery-3"],
+
+        ["warehouse-mk2", "angels-warehouse-mk2"],
+        ["warehouse-mk3", "angels-warehouse-mk3"],
+        ["warehouse-mk4", "angels-warehouse-mk4"],
+        ["warehouse-passive-provider-mk2", "angels-warehouse-passive-provider-mk2"],
+        ["warehouse-passive-provider-mk3", "angels-warehouse-passive-provider-mk3"],
+        ["warehouse-passive-provider-mk4", "angels-warehouse-passive-provider-mk4"],
+        ["warehouse-active-provider-mk2", "angels-warehouse-active-provider-mk2"],
+        ["warehouse-active-provider-mk3", "angels-warehouse-active-provider-mk3"],
+        ["warehouse-active-provider-mk4", "angels-warehouse-active-provider-mk4"],
+        ["warehouse-storage-mk2", "angels-warehouse-storage-mk2"],
+        ["warehouse-storage-mk3", "angels-warehouse-storage-mk3"],
+        ["warehouse-storage-mk4", "angels-warehouse-storage-mk4"],
+        ["warehouse-requester-mk2", "angels-warehouse-requester-mk2"],
+        ["warehouse-requester-mk3", "angels-warehouse-requester-mk3"],
+        ["warehouse-requester-mk4", "angels-warehouse-requester-mk4"],
+        ["warehouse-buffer-mk2", "angels-warehouse-buffer-mk2"],
+        ["warehouse-buffer-mk3", "angels-warehouse-buffer-mk3"],
+        ["warehouse-buffer-mk4", "angels-warehouse-buffer-mk4"]
+    ],
+    "item": [
+        ["algae-farm-5", "angels-algae-farm-5"],
+        ["bio-arboretum-2", "angels-bio-arboretum-2"],
+        ["bio-arboretum-3", "angels-bio-arboretum-3"],
+        ["bio-generator-temperate-2", "angels-bio-generator-temperate-2"],
+        ["bio-generator-temperate-3", "angels-bio-generator-temperate-3"],
+        ["bio-generator-swamp-2", "angels-bio-generator-swamp-2"],
+        ["bio-generator-swamp-3", "angels-bio-generator-swamp-3"],
+        ["bio-generator-desert-2", "angels-bio-generator-desert-2"],
+        ["bio-generator-desert-3", "angels-bio-generator-desert-3"],
+        ["bio-press-2", "angels-bio-press-2"],
+        ["bio-press-3", "angels-bio-press-3"],
+        ["bio-processor-2", "angels-bio-processor-2"],
+        ["bio-processor-3", "angels-bio-processor-3"],
+        ["bio-butchery-2", "angels-bio-butchery-2"],
+        ["bio-butchery-3", "angels-bio-butchery-3"],
+        ["composter-2", "angels-composter-2"],
+        ["composter-3", "angels-composter-3"],
+        ["crop-farm-2", "angels-crop-farm-2"],
+        ["crop-farm-3", "angels-crop-farm-3"],
+        ["temperate-farm-2", "angels-temperate-farm-2"],
+        ["temperate-farm-3", "angels-temperate-farm-3"],
+        ["swamp-farm-2", "angels-swamp-farm-2"],
+        ["swamp-farm-3", "angels-swamp-farm-3"],
+        ["desert-farm-2", "angels-desert-farm-2"],
+        ["desert-farm-3", "angels-desert-farm-3"],
+        ["bio-hatchery-2", "angels-bio-hatchery-2"],
+        ["bio-hatchery-3", "angels-bio-hatchery-3"],
+        ["nutrient-extractor-2", "angels-nutrient-extractor-2"],
+        ["nutrient-extractor-3", "angels-nutrient-extractor-3"],
+        ["bio-refugium-fish-2", "angels-bio-refugium-fish-2"],
+        ["bio-refugium-fish-3", "angels-bio-refugium-fish-3"],
+        ["bio-refugium-puffer-2", "angels-bio-refugium-puffer-2"],
+        ["bio-refugium-puffer-3", "angels-bio-refugium-puffer-3"],
+        ["bio-refugium-biter-2", "angels-bio-refugium-biter-2"],
+        ["bio-refugium-biter-3", "angels-bio-refugium-biter-3"],
+        ["seed-extractor-2", "angels-seed-extractor-2"],
+        ["seed-extractor-3", "angels-seed-extractor-3"],
+
+        ["advanced-chemical-plant-3","angels-advanced-chemical-plant-3"],
+
+        ["hydro-plant-4", "angels-hydro-plant-4"],
+        ["salination-plant-3", "angels-salination-plant-3"],
+        ["washing-plant-3", "angels-washing-plant-3"],
+        ["washing-plant-4", "angels-washing-plant-4"],
+        ["ore-crusher-4", "angels-ore-crusher-4"],
+        ["ore-floatation-cell-4", "angels-ore-floatation-cell-4"],
+        ["ore-leaching-plant-4", "angels-ore-leaching-plant-4"],
+        ["ore-refinery-3", "angels-ore-refinery-3"],
+
+        ["warehouse-mk2", "angels-warehouse-mk2"],
+        ["warehouse-mk3", "angels-warehouse-mk3"],
+        ["warehouse-mk4", "angels-warehouse-mk4"],
+        ["warehouse-passive-provider-mk2", "angels-warehouse-passive-provider-mk2"],
+        ["warehouse-passive-provider-mk3", "angels-warehouse-passive-provider-mk3"],
+        ["warehouse-passive-provider-mk4", "angels-warehouse-passive-provider-mk4"],
+        ["warehouse-active-provider-mk2", "angels-warehouse-active-provider-mk2"],
+        ["warehouse-active-provider-mk3", "angels-warehouse-active-provider-mk3"],
+        ["warehouse-active-provider-mk4", "angels-warehouse-active-provider-mk4"],
+        ["warehouse-storage-mk2", "angels-warehouse-storage-mk2"],
+        ["warehouse-storage-mk3", "angels-warehouse-storage-mk3"],
+        ["warehouse-storage-mk4", "angels-warehouse-storage-mk4"],
+        ["warehouse-requester-mk2", "angels-warehouse-requester-mk2"],
+        ["warehouse-requester-mk3", "angels-warehouse-requester-mk3"],
+        ["warehouse-requester-mk4", "angels-warehouse-requester-mk4"],
+        ["warehouse-buffer-mk2", "angels-warehouse-buffer-mk2"],
+        ["warehouse-buffer-mk3", "angels-warehouse-buffer-mk3"],
+        ["warehouse-buffer-mk4", "angels-warehouse-buffer-mk4"],
+
+        ["solid-sodium-floride", "angels-solid-sodium-floride"],
+        ["solid-disodium-phosphate", "angels-solid-disodium-phosphate"],
+        ["solid-tetrasodium-pyrophosphate", "angels-solid-tetrasodium-pyrophosphate"],
+
+        ["solid-tungsten-trioxide", "angels-solid-tungsten-trioxide"],
+        ["solid-sodium-tungstate", "angels-solid-sodium-tungstate"],
+        ["powder-tungsten-carbide", "angels-powder-tungsten-carbide"],
+        ["titanium-concrete-brick", "angels-titanium-concrete-brick"]
+
+    ],
+    "recipe": [
+        ["algae-farm-5", "angels-algae-farm-5"],
+        ["bio-generator-temperate-2", "angels-bio-generator-temperate-2"],
+        ["bio-generator-swamp-2", "angels-bio-generator-swamp-2"],
+        ["bio-generator-desert-2", "angels-bio-generator-desert-2"],
+        ["bio-arboretum-2", "angels-bio-arboretum-2"],
+        ["bio-generator-temperate-3", "angels-bio-generator-temperate-3"],
+        ["bio-generator-swamp-3", "angels-bio-generator-swamp-3"],
+        ["bio-generator-desert-3", "angels-bio-generator-desert-3"],
+        ["bio-arboretum-3", "angels-bio-arboretum-3"],
+        ["bio-press-2", "angels-bio-press-2"],
+        ["bio-press-3", "angels-bio-press-3"],
+        ["bio-processor-2", "angels-bio-processor-2"],
+        ["bio-processor-3", "angels-bio-processor-3"],
+        ["bio-butchery-2", "angels-bio-butchery-2"],
+        ["bio-butchery-3", "angels-bio-butchery-3"],
+        ["composter-2", "angels-composter-2"],
+        ["composter-3", "angels-composter-3"],
+        ["crop-farm-2", "angels-crop-farm-2"],
+        ["crop-farm-3", "angels-crop-farm-3"],
+        ["temperate-farm-2", "angels-temperate-farm-2"],
+        ["temperate-farm-3", "angels-temperate-farm-3"],
+        ["desert-farm-2", "angels-desert-farm-2"],
+        ["desert-farm-3", "angels-desert-farm-3"],
+        ["swamp-farm-2", "angels-swamp-farm-2"],
+        ["swamp-farm-3", "angels-swamp-farm-3"],
+        ["bio-hatchery-2", "angels-bio-hatchery-2"],
+        ["bio-hatchery-3", "angels-bio-hatchery-3"],
+        ["nutrient-extractor-2", "angels-nutrient-extractor-2"],
+        ["nutrient-extractor-3", "angels-nutrient-extractor-3"],
+        ["bio-refugium-fish-2", "angels-bio-refugium-fish-2"],
+        ["bio-refugium-fish-3", "angels-bio-refugium-fish-3"],
+        ["bio-refugium-puffer-2", "angels-bio-refugium-puffer-2"],
+        ["bio-refugium-puffer-3", "angels-bio-refugium-puffer-3"],
+        ["bio-refugium-biter-2", "angels-bio-refugium-biter-2"],
+        ["bio-refugium-biter-3", "angels-bio-refugium-biter-3"],
+        ["seed-extractor-2", "angels-seed-extractor-2"],
+        ["seed-extractor-3", "angels-seed-extractor-3"],
+
+        ["advanced-chemical-plant-3", "angels-advanced-chemical-plant-3"],
+        ["solid-sodium-floride-1", "angels-solid-sodium-floride-1"],
+        ["solid-sodium-floride-2", "angels-solid-sodium-floride-2"],
+        ["gas-argon", "angels-gas-argon"],
+        ["solid-disodium-phosphate", "angels-solid-disodium-phosphate"],
+        ["solid-tetrasodium-pyrophosphate", "angels-solid-tetrasodium-pyrophosphate"],
+
+        ["hydro-plant-4", "angels-hydro-plant-4"],
+        ["salination-plant-3", "angels-salination-plant-3"],
+        ["washing-plant-3", "angels-washing-plant-3"],
+        ["washing-plant-4", "angels-washing-plant-4"],
+        ["ore-crusher-4", "angels-ore-crusher-4"],
+        ["ore-floatation-cell-4", "angels-ore-floatation-cell-4"],
+        ["ore-leaching-plant-4", "angels-ore-leaching-plant-4"],
+        ["ore-refinery-3", "angels-ore-refinery-3"],
+
+        ["solid-tungsten-trioxide-smelting","angels-solid-tungsten-trioxide-smelting"],
+        ["pellet-tungsten-smelting-2","angels-pellet-tungsten-smelting-2"],
+        ["solid-sodium-tungstate-smelting","angels-solid-sodium-tungstate-smelting"],
+        ["powder-zinc","angels-powder-zinc"],
+        ["casting-powder-tungsten-3","angels-casting-powder-tungsten-3"],
+        ["copper-tungsten-smelting-1","angels-copper-tungsten-smelting-1"],
+        ["copper-tungsten-smelting-2","angels-copper-tungsten-smelting-2"],
+        ["molten-copper-tungsten-smelting-1","angels-molten-copper-tungsten-smelting-1"],
+        ["solid-tungsten-oxide-smelting-2","angels-solid-tungsten-oxide-smelting-2"],
+        ["tungsten-carbide-smelting-1","angels-tungsten-carbide-smelting-1"],
+        ["tungsten-carbide-smelting-2","angels-tungsten-carbide-smelting-2"],
+        ["tungsten-carbide-smelting-3","angels-tungsten-carbide-smelting-3"],
+        ["plate-tungsten-carbide","angels-plate-tungsten-carbide"],
+        ["titanium-concrete-brick","angels-titanium-concrete-brick"],
+
+        ["warehouse-mk2", "angels-warehouse-mk2"],
+        ["warehouse-passive-provider-mk2", "angels-warehouse-passive-provider-mk2"],
+        ["warehouse-active-provider-mk2", "angels-warehouse-active-provider-mk2"],
+        ["warehouse-buffer-mk2", "angels-warehouse-buffer-mk2"],
+        ["warehouse-storage-mk2", "angels-warehouse-storage-mk2"],
+        ["warehouse-requester-mk2", "angels-warehouse-requester-mk2"],
+
+        ["warehouse-mk3", "angels-warehouse-mk3"],
+        ["warehouse-passive-provider-mk3", "angels-warehouse-passive-provider-mk3"],
+        ["warehouse-active-provider-mk3", "angels-warehouse-active-provider-mk3"],
+        ["warehouse-buffer-mk3", "angels-warehouse-buffer-mk3"],
+        ["warehouse-storage-mk3", "angels-warehouse-storage-mk3"],
+        ["warehouse-requester-mk3", "angels-warehouse-requester-mk3"],
+
+        ["warehouse-mk4", "angels-warehouse-mk4"],
+        ["warehouse-passive-provider-mk4", "angels-warehouse-passive-provider-mk4"],
+        ["warehouse-active-provider-mk4", "angels-warehouse-active-provider-mk4"],
+        ["warehouse-buffer-mk4", "angels-warehouse-buffer-mk4"],
+        ["warehouse-storage-mk4", "angels-warehouse-storage-mk4"],
+        ["warehouse-requester-mk4", "angels-warehouse-requester-mk4"]
+    ],
+    "fluid": [
+        ["gas-argon", "angels-gas-argon"],
+        ["liquid-molten-copper-tungsten", "angels-liquid-molten-copper-tungsten"],
+        ["gas-tungsten-hexachloride", "angels-gas-tungsten-hexachloride"]
+    ],
+    "technology": [
+        ["advanced-bio-processing", "angels-advanced-bio-processing"],
+        ["bio-farm-3", "angels-bio-farm-3"],
+        ["bio-refugium-butchery-3", "angels-bio-refugium-butchery-3"],
+        ["bio-farm-advanced-upgrade-1", "angels-bio-farm-advanced-upgrade-1"],
+        ["bio-farm-advanced-upgrade-2", "angels-bio-farm-advanced-upgrade-2"],
+        ["bio-refugium-hatchery-2", "angels-bio-refugium-hatchery-2"],
+        ["bio-nutrient-paste-2", "angels-bio-nutrient-paste-2"],
+        ["bio-refugium-fish-3", "angels-bio-refugium-fish-3"],
+
+        ["sodium-processing-3", "angels-sodium-processing-3"],
+
+        ["water-washing-3", "angels-water-washing-3"],
+        ["water-treatment-5", "angels-water-treatment-5"],
+        ["water-washing-4", "angels-water-washing-4"],
+        ["advanced-ore-refining-5", "angels-advanced-ore-refining-5"],
+
+        ["copper-tungsten-smelting-1", "angels-copper-tungsten-smelting-1"],
+        ["copper-tungsten-smelting-2", "angels-copper-tungsten-smelting-2"],
+        ["stone-smelting-4", "angels-stone-smelting-4"],
+        ["tungsten-carbide-smelting-1", "angels-tungsten-carbide-smelting-1"],
+        ["tungsten-carbide-smelting-2", "angels-tungsten-carbide-smelting-2"],
+        ["tungsten-carbide-smelting-3", "angels-tungsten-carbide-smelting-3"],
+
+        ["warehouses-2", "angels-warehouses-2"],
+        ["warehouses-3", "angels-warehouses-3"],
+        ["warehouses-4", "angels-warehouses-4"],
+        ["logistic-warehouses-2", "angels-logistic-warehouses-2"],
+        ["logistic-warehouses-3", "angels-logistic-warehouses-3"],
+        ["logistic-warehouses-4", "angels-logistic-warehouses-4"]
+    ]
+}
